--- a/.gitignore
+++ b/.gitignore
@@ -6,25 +6,42 @@ __pycache__/
 .Python
 env/
 venv/
+.venv/
 ENV/
-.env
+env.bak/
+venv.bak/
 
-# Models and data
-*.pkl
-*.csv
-!requirements.txt
-
-# Node
+# Node modules
 node_modules/
-dist/
-.DS_Store
-*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+
+# Logs
+*.log
+
+# Model files (optional - you might want to include the trained model)
+# backend/models/*.pkl
